fixed copy/paste error in _data/2022/odissei/participants.yml

--- a/_data/2022/odissei/participants.yml
+++ b/_data/2022/odissei/participants.yml
@@ -23,14 +23,14 @@
   
 - name: "Reshmi Gopalakrishna Pillai"
   image: /assets/images/17m_XdJMPc0C55JUlh-0glw4TyKnheImD.jpeg
-  bio: "Gopalakrishna Pillai","bio":"Reshmi is a Lecturer at the Informatics Institute, University of Amsterdam. She holds a PhD from the University of Wolverhampton for her thesis on the expressions of psychological stress in tweets. Her research interests are in analyzing language using natural language processing methods for a better understanding of behaviors and states of individuals and the society."
+  bio: "Reshmi is a Lecturer at the Informatics Institute, University of Amsterdam. She holds a PhD from the University of Wolverhampton for her thesis on the expressions of psychological stress in tweets. Her research interests are in analyzing language using natural language processing methods for a better understanding of behaviors and states of individuals and the society."
   website: https://www.linkedin.com/in/reshmi-g-pillai/
   
 - name: "Gita Huijgen"
   image: /assets/images/1VnPIB99cK9-q3A_4sM4p6CazHvRxgpow.jpeg
   bio: "Gita Huijgen is a first-year PhD student in sociology at Erasmus University Rotterdam. She examines the interrelations of public care provision, family solidarity and community cohesion, for which she intends to use computational methods. She obtained a MSc and a BSc in sociology at Radboud University."
   
-- name: "Kyri Janssen "
+- name: "Kyri Janssen"
   image: /assets/images/16G9efKFVjjr6gOGd1myzYCjfgu2mnwg2.jpeg
   bio: "Kyri Janssen is a PhD student at Delft University of Technology, with an educational background in spatial economics, human geography, and international development studies. Her research examines state-led gentrification and how this shapes residential mobility of individual households within and between cities of the Netherlands."
   website: https://twitter.com/KyriJanssen
