--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -27,11 +27,11 @@
   events:
     - name: "9:00 - 9:30 Logistics"
     - name: "9:30 - 10:30 Highlights of Text as Data"
-    - name: "10:30-11:30 Group Exercise, Session I"
-    - name: "11:30 - 12:30 Lunch"
-    - name: "12:30 - 2:00 Talk by P.M. Aronow"
-    - name: "2:30 - 4:00 Group Exercise, Session II"
-    - name: "4:00 - 4:30 Group Presentations" 
+    - name: "10:30-12:00 Group Exercise, Session I"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:15 - 3:30 Group Exercise, Session II"
+    - name: "3:30 - 4:00 Group Presentations"
+    - name: "4:15 - 5:00 Live Tutorial TBD" 
 
 - date: June 23, 2022
   name: Machine Learning for Prediction and Classification
@@ -73,9 +73,10 @@
 - date: June 28, 2022
   name: Group work day
   events:
-    - name: "9:00 - 12:00 Group work time"
-    - name: "12:00 - 1:30 Lunch"
-    - name: "1:30 - 3:00 Group work time"
+    - name: "9:00 - 10:00 Group work time"
+    - name: "10:00 - 11:30 Talk by P.M. Aronow"
+    - name: "11:30 - 1:00 Lunch"
+    - name: "1:00 - 3:00 Group work time"
     - name: "3:00 - 4:30 Talk by Tamar Mitts"
 
 - date: June 29, 2022
