--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -5,7 +5,7 @@
     - name: "11:00 - 13:00 Intro. data collection and ethics"
     - name: "13:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:00 APIs and web scraping"
-    - name: "16:00 - 18:00 Research talk: Carolina Scarton"
+    - name: "16:00 - 18:00 Research talk: Carolina Scarton. 'Supporting professional fact-checking: Can NLP/AI help?'"
     - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"  
     
 - date: 2022-06-14
@@ -14,7 +14,7 @@
     - name: "10:00 - 13:00 "
     - name: "13:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:00 "       
-    - name: "16:00 - 18:00 Research talk: Anita Gohdes"
+    - name: "16:00 - 18:00 Research talk: Anita Gohdes. 'Civilian Signalling on Social Media During Civil War'"
 
 - date: 2022-06-15
   name: Networks
