--- a/_data/2022/paris/participants.yml
+++ b/_data/2022/paris/participants.yml
@@ -33,7 +33,7 @@
   
 - name: Donia Kamel
   image: /assets/images/donia_kamel.jpg
-  bio: I am a first year PhD student in Economics at the Paris School of Economics. I am particularly interested in studying migration through the lens of big data and novel methods to understand the role of networks, mobility, assimilation, integration of refugees, intention to migrate and attitudes towards immigration and refugees.
+  bio: Donia Kamel is a first year PhD student in Economics at the Paris School of Economics. She is particularly interested in studying migration through the lens of big data and novel methods to understand the role of networks, mobility, assimilation, integration of refugees, intention to migrate and attitudes towards immigration and refugees.
   
 - name: Maël Lecoursonnais
   image: /assets/images/mael_lecoursonnais.jpg
