--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -29,9 +29,9 @@
   name: Natural Language Processing  
   events:
   - name: "9:30 - 10:00 Logistics"
-  - name: "10:00 - 11:00 Talk by Kaiping Chen (UW Madison)"
-  - name: "11:00 - 12:30 Tutorial on NLP and sentiment analysis"
-  - name: "12:30 - 13:30 Lunch time"
+  - name: "10:00 - 11:30 Tutorial on NLP and sentiment analysis"
+  - name: "11:30 - noon Research speed-dating"
+  - name: "noon - 13:30 Lunch time & talk by Kaiping Chen (UW Madison)"
   - name: "13:30 - 16:00 Small group activity"
   - name: "16:00 - 17:00 Participant research talks"
   
