--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -51,7 +51,8 @@
   - name: "10:00 - 11:30 Tutorial on data visualization"
   - name: "11:30 - noon Group formation"
   - name: "noon - 13:30 Lunch time" 
-  - name: "13:30 - 16:00 Small group activity"
+  - name: "13:30 - 14:30 Campus tour"
+  - name: "14:30 - 16:00 Small group activity"
   - name: "16:00 - 17:00 Participant research talks"
   
 - date: June 25, 2022 
