--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -11,13 +11,13 @@
      
         **Speakers**
       
-          - Speaker TBA
+          - Clinton Carter, Ph.D., Post-Doc Scholar, Penn State, Genetic Anthropologist
 
-          - Speaker TBA
+          - Sharon Klau
+          
+          - Williams Spriggs, Ph.D., Professor, Economics Department, Howard University & Chief Economist for the AFL-CIO
 
-          - Speaker TBA
-
-          - Speaker TBA
+          - Shannelle Thomas, Ph.D., Assistant Professor, Sociology, Bowie State University
 
 
           
@@ -29,11 +29,11 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors [Dr. Randal Pinkett](https://www.randalpinkett.com/) and [Dr. Jeffrey Robinson](https://www.business.rutgers.edu/faculty/jeffrey-robinson) [(slide)](https://docs.google.com/presentation/d/1DQdFX0osncnS4Rq_U5vHWxFm0qwDYxtv_xWcHc8QFLA/edit?usp=sharing) (*Zoom*) [(video)](https://youtu.be/B5V2s8xoi08) (LIVE Q+A)"
     - name: "2:15 - 2:30 Break"
-    - name: "2:30 - 5:30 R Workshop (*Zoom*) (video)
+    - name: '2:30 - 5:30 R Workshop "Making Computational Methods Accessible: R basics and Data Wrangling" (*Zoom*) (video)
         
         - [Evan Muzzall, Ph.D.](https://library.stanford.edu/people/muzzall), Head of Software and Services for Data Science, Stanford University
         
-        - [Jose Martin Aveldanes](https://sociology.berkeley.edu/graduate-student/jose-martin-aveldanes), Ph.D. student, Sociology, UC Berkeley"
+        - [Jose Martin Aveldanes](https://sociology.berkeley.edu/graduate-student/jose-martin-aveldanes), Ph.D. student, Sociology, UC Berkeley'
 
 
 - date: 2022-06-19
@@ -132,7 +132,7 @@
           - Building the Public Interest Technology by Jenny Toomey & Latanya Sweeney, [Stanford Social Innovation Review](https://ssir.org/articles/entry/building_the_public_interest_technology_infrastructure_of_the_future#)"
 
           
-    - name: "2:00 - 5:00 R Workshop (*Zoom*) (video)
+    - name: "2:00 - 5:00 R Workshop "Making Computational Methods Accessible: Modeling and Visualization" (*Zoom*) (video)
         
         - [Evan Muzzall, Ph.D.](https://library.stanford.edu/people/muzzall), Head of Software and Services for Data Science, Stanford University
         
@@ -206,7 +206,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Extract Features from Tweets (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective (slide) [(video)](https://youtu.be/1zSylGNvNpI) and varyCSS [(video)](https://youtu.be/tGn-1it1n98) (*Zoom*) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective [(slide)](https://docs.google.com/presentation/d/1YlFlaNqY1DArII4OH838j_vhrPv6rg7xMimiBCXzExY/edit?usp=sharing) [(video)](https://youtu.be/1zSylGNvNpI) and varyCSS [(video)](https://youtu.be/tGn-1it1n98) (*Zoom*) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
     
       - [Christen A. Smith, Ph.D.](https://liberalarts.utexas.edu/anthropology/faculty/cs23775), Associate Professor of African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin
       
