--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -132,11 +132,11 @@
           - Building the Public Interest Technology by Jenny Toomey & Latanya Sweeney, [Stanford Social Innovation Review](https://ssir.org/articles/entry/building_the_public_interest_technology_infrastructure_of_the_future#)"
 
           
-    - name: "2:00 - 5:00 R Workshop "Making Computational Methods Accessible: Modeling and Visualization" (*Zoom*) (video)
+    - name: '2:00 - 5:00 R Workshop "Making Computational Methods Accessible: Modeling and Visualization" (*Zoom*) (video)
         
         - [Evan Muzzall, Ph.D.](https://library.stanford.edu/people/muzzall), Head of Software and Services for Data Science, Stanford University
         
-        - [Jose Martin Aveldanes](https://sociology.berkeley.edu/graduate-student/jose-martin-aveldanes), Ph.D. student, Sociology, UC Berkeley"
+        - [Jose Martin Aveldanes](https://sociology.berkeley.edu/graduate-student/jose-martin-aveldanes), Ph.D. student, Sociology, UC Berkeley'
 
   
 - date: 2022-06-20
