--- a/_data/2022/paris/participants.yml
+++ b/_data/2022/paris/participants.yml
@@ -1,6 +1,6 @@
 - name: João Areal
   image: /assets/images/joao_areal.jpg
-  bio: João Areal is a PhD candidate in Political Science at the CDSS. He holds a Bachelor's degree in Politics and Philosophy from the University of Sheffield (UK) and a Master's degree in Social Sciences (Research) from the University of Amsterdam (NL). His master thesis explored the topic of affective polarisation in Brazil, focusing on the concept of negative political identities. During his time in Amsterdam, JoÃ£o worked as a research assistant and undertook an internship at the Hot Politics Lab (https://www.hotpolitics.eu/), where he and his colleagues developed a measure of elite hostility using parliamentary speech data. Methodologically, his interests lie in the field of Computational Social Sciences, with a focus on automated text analysis. JoÃ£o's research interests include affective polarisation, positive and negative partisanship, comparative political behaviour, and Brazilian politics.
+  bio: João Areal is a PhD candidate in Political Science at the CDSS. He holds a Bachelor's degree in Politics and Philosophy from the University of Sheffield (UK) and a Master's degree in Social Sciences (Research) from the University of Amsterdam (NL). His master thesis explored the topic of affective polarisation in Brazil, focusing on the concept of negative political identities. During his time in Amsterdam, Joāo worked as a research assistant and undertook an internship at the Hot Politics Lab (https://www.hotpolitics.eu/), where he and his colleagues developed a measure of elite hostility using parliamentary speech data. Methodologically, his interests lie in the field of Computational Social Sciences, with a focus on automated text analysis. JoÃ£o's research interests include affective polarisation, positive and negative partisanship, comparative political behaviour, and Brazilian politics.
   
 - name: Başak Bozkurt
   image: /assets/images/basak_bozkurt.jpg
@@ -62,7 +62,7 @@
 
 - name: Mella Perleberg 
   image: /assets/images/mella_perleberg.jpg
-  bio: Mella Perleberg is currently pursuing a master’s degree in Sociology and Social Research at University of Cologne. Her research interest concerns the application of machine learning in criminological research and most recently she explored how machine learning algorithms can be used for crime prediction. She received her bachelors degree at University of Goettingen.
+  bio: Mella Perleberg is currently pursuing a master’s degree in Sociology and Social Research at University of Cologne. Her research interest concerns the application of machine learning in criminological research and most recently she explored how machine learning algorithms can be used for crime prediction. She received her bachelor's degree at University of Goettingen.
 
 - name: Molly Quinn 
   image: /assets/images/molly_quinn.jpg
