--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -14,7 +14,7 @@
     - name: "10:00 - 13:00 Intro. Computational Methods"
     - name: "13:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:00 Intro. Qualitative Digital Research"       
-    - name: "16:00 - 18:00 Research talk: Anita Gohdes. 'Civilian Signalling on Social Media During Civil War'"
+    - name: "16:00 - 18:00 Research talk: Anita Gohdes. 'Distract and Divert: How World Leaders Use Social Media During Contentious Politics'"
 
 - date: 2022-06-15
   name: Networks
