--- a/_data/2022/odissei/faculty.yml
+++ b/_data/2022/odissei/faculty.yml
@@ -24,5 +24,9 @@
 
 - name: "Godelieve de Wijer"
   image: /assets/images/godelieve_dewijer.jpeg
-  bio: Godelieve de Wijer is a Community Manager at ODISSEI. As a Community Manager, she is responsible for increasing the awareness amongst researchers for ODISSEI and its facilities. This includes organising events, conferences and managing all communication related to ODISSEI. Furthermore, she also works on the promoting and developing the educational side of ODISSEI, including lectures, workshops and the summer school. She is one of the organisers of SICSS-ODISSEI. If you have any questions related to the summer school of ODISSEI, please contact sicss@odissei-data.nl.
+  bio: "Godelieve de Wijer is a Community Manager at ODISSEI. As a Community Manager, she is responsible for increasing the awareness amongst researchers for ODISSEI and its facilities. This includes organising events, conferences and managing all communication related to ODISSEI. Furthermore, she also works on the promoting and developing the educational side of ODISSEI, including lectures, workshops and the summer school. She is one of the organisers of SICSS-ODISSEI. If you have any questions related to the summer school of ODISSEI, please contact sicss@odissei-data.nl."
   website: http://www.ldetraineeship.nl/over-ons/trainees-2021/bart-de-grood/
+  
+- name: "Suze Zijlstra"
+  image: assets/images/Foto Suze Zijlstra.png
+  bio: "Dr. Suze Zijlstra is Community Manager of ODISSEI. She is responsible for communications, organising events, and the coordination of the educational programme of ODISSEI. In June, she will be coordinating the practical side of SICSS-ODISSEI. You can reach her through suze@odissei-data.nl."
