--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -31,7 +31,7 @@
     - name: "12:00 - 13:00 ILCC Poster Session"
     - name: "13:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:00 NLP"       
-    - name: "16:00 - 18:00 Research talk: Clare Llewellyn"
+    - name: "16:00 - 18:00 Research talk: Clare Llewellyn. 'Who, or what, influences you online?'"
 
 - date: 2022-06-17
   name: Machine learning and prediction
