--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -22,7 +22,7 @@
     - name: "10:00 - 13:00 Network theory and social media network analysis"
     - name: "13:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:00 Analyzing Twitter networks"       
-    - name: "16:00 - 18:00 Research talk: Maria Wolters"
+    - name: "16:00 - 18:00 Research talk: Maria Wolters. 'When Counting and Modelling is not Enough: Case Studies from Health Research'"
 
 - date: 2022-06-16
   name: Computational Text Analysis and NLP
