--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -142,16 +142,17 @@
     - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
     
     - name: "**10:30-12:00** Introduction to Internet Search Data."
-    - name: "**12:00-13:00** Tutorials"
+    - name: "**12:00-13:00** Tutorial: Machine Learning for Beginners"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorial: Machine Learning in R for beginners"
-    - name: "**15:30-18:00** Group Exercises"
+    - name: "**14:00-16:00** Tutorial: Maps with {leaflet}"
+    - name: "**16:00-18:00** Group Exercises"
     - name: "**18:00-** Dinner" 
 
 - date: 2022-06-27
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-13:00** Group Exercises"
+    - name: "**09:15-10:30** Tutorial: Spatial networks in R with {sfnetworks} and {tidygraph}"
+    - name: "**10:30-13:00** Group Exercises"
     - name: "**13:00-14:00** Lunch"
     - name: "**14:00-16:00** Group Exercises"
     - name: "**16:00-18:00** SICSS-Africa + African Descendants Inaugural Joint Panel (with: 
@@ -177,7 +178,7 @@ This panel will discuss key challenges in the collection of precise data as well
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
     - name: "**09:15-12:00** Group Exercises"
-    - name: "**12:00-14:00** Becoming a package developer: An Introduction
+    - name: "**12:00-14:00** Tutorial: Becoming a package developer: *An Introduction*
     <br/> 
     <br/> 
     R packages are an ideal way to package and distribute R code and data for re-use by others. In this session, with a live demo, we shall demystify the creation of an R package using automated tools like usethis. We will also uncover why to create a package (or not), how to improve your R package and your package development skills. The session will also highlight how to solve the challenges you will encounter in developing an R package. Lastly, we will discuss how to find your happy place in the world of R package development – as a devoted maintainer of one package or a valued contributor to dozens of packages."
