fixed missing quotation marks in london schedule.yml

--- a/_data/2022/london/schedule.yml
+++ b/_data/2022/london/schedule.yml
@@ -31,7 +31,7 @@
     - name: "Location - ICBS Room LTG"
     - name: "9:30  - 10:00 Light breakfast (optional)"
     - name: "10:00 - 11:30 Code Tutorial - APIs and Web Scraping"
-    - name: "11:30 - 12:00 Exercise overview & group formation
+    - name: "11:30 - 12:00 Exercise overview & group formation"
     - name: "12:00 - 1:00  Break for Lunch (provided)"
     - name: "1:00  - 3:30  Small group exercise - scraping hackathon"
     - name: "3:30 - 4:30  Hackathon group presentations"
