--- a/_data/2022/delhi/speakers.yml
+++ b/_data/2022/delhi/speakers.yml
@@ -29,7 +29,7 @@
   website: https://iitd.irins.org/profile/16647
  
 - name: Narges Hajimoladarvish
-  bio: Narges Hajimoladarvish is an Assistant professor at Alzahra University. She holds a PhD in Economics from University of Leicester. More information about her is available at this <a href="http://staff.alzahra.ac.ir/nargesdarvish/en/">link</a>
+  bio: Narges Hajimoladarvish is a senior research fellow at the Centre for Social and Behaviour Change. Narges is a trained economist with an interest in Behavioural and Experimental Economics. She runs experiments to investigate decision-making under risk and uncertainty and has expertise in eliciting risk and time preferences. Narges has a PhD in Economics from the University of Leicester. She has 11 years of experience in teaching a variety of courses at the University of Leicester and Alzahra University. Prior to Joining CSBC, Narges was an Assistant Professor at Alzahra University where she wrote an introductory book about Behavioural Economics in Farsi and established a laboratory for Experimental Economics. She has also contributed to Financial Tribune, an Iranian English Economic Daily.
   image: /assets/images/nargis_hajimoladarvish.jpg
   website: https://www.linkedin.com/in/narges-hajimoladarvish-5025b342/?originalSubdomain=ir
   
