--- a/_data/2022/bologna/schedule.yml
+++ b/_data/2022/bologna/schedule.yml
@@ -72,7 +72,7 @@
 - date: 2022-06-16
   name: Student Presentations and Guest Lectures [in person at UNIBO]
   events:
-    - name: "10:00 - 12:15/:30	Annalisa Pelizza - [tba]"
+    - name: "10:00 - 12:15/:30	Annalisa Pelizza - The Ontology Explorer: A Method to Make Visible Data Infrastructures for Population Management"
     - name: "13:00 - 14:00  Lunch Time"
     - name: "14:00 - 15:30  Student Project Presentations [x3]"
     - name: "15:30 - 16:30	LAB - Small group work/Discussion on students' projects [3* TA]"
