--- a/_data/2022/fgv-dapp-brazil/schedule.yml
+++ b/_data/2022/fgv-dapp-brazil/schedule.yml
@@ -1,4 +1,6 @@
-- date: All times are in Brazilian (Brasilia - Federal District) Time
+- date: All times are in Brazilian (Brasilia - Federal District) Time.
+  name: We intend to run our partner edition mostly in Portuguese.
+
 
 - date: 2022-06-20
   name: Introduction and Ethics
